fix for minicart prod description overflow 2

--- a/skin/frontend/enterprise/bootstrap/css/style.css
+++ b/skin/frontend/enterprise/bootstrap/css/style.css
@@ -658,7 +658,7 @@ body[class*='checkout'] #header-checkoutBtn { /* hides just on checkout pages */
     width: auto !important;
 }
   	
-#mini-cart .product-name {
+#mini-cart .product-name a {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
